welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:28: error: expected start of definition
	override def forward(i:Int)  { 
                 ^LineByLine:31: error: expected start of definition
	override def forward()  {
                 ^LineByLine:34: error: expected start of definition
	override def backward(i:Int) {
                 ^LineByLine:37: error: expected start of definition
	override def backward() {
                 ^LineByLine:40: error: Unmatched closing brace '}' ignored here
}
^