welcome.lessons.welcome.traversal.line.TraversalByLine.scala.code
  var cpt=0
override def run() {
  var h=getMondeHauteur
  var l=getMondeLargeur
  var x:Int=0
  var y:Int=0
  //var x:Int=0
  //var y:Int=0
    for (x <- 0 to h-1){
      setPos(x,y)
    	cpt+=1
    	ecritMessage(cpt)
      
  }
  for (y <- 0 to l-1){
    	cpt+=1
    	ecritMessage(cpt)
    }
  	
  
    
  } 

}
